--- a/notebooks/ArcData.ipynb
+++ b/notebooks/ArcData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,11 @@
      "output_type": "stream",
      "text": [
       "Checking for sale data...\n",
-      "No local data found!\n",
-      "Have to fetch again...\n",
+      "Found sale data from: Thu May 13 15:30:50 2021\n",
+      "Will be using this locally saved data...\n",
       "Checking for return data...\n",
-      "No local data found!\n",
-      "Have to fetch again...\n"
+      "Found return data from: Thu May 13 15:31:15 2021\n",
+      "Will be using this locally saved data...\n"
      ]
     }
    ],
@@ -92,18 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting Sale data... Please wait!\n",
-      "Took 28.95 seconds to get Sale data.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv()\n",
     "\n",
@@ -130,18 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting Return data... Please wait!\n",
-      "Took 13.43 seconds to get Return data.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if fetchReturnData:\n",
     "    print('Getting Return data... Please wait!')\n",
@@ -171,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +232,7 @@
        "4     4256  9678996946      104 2020-01-22 07:56:56"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +346,7 @@
        "4     4256  9678996946      104 2020-01-22 07:56:56     4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +431,7 @@
        "4  1017492318     8                    1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -495,6 +477,9 @@
        "      <th>9</th>\n",
        "      <th>10</th>\n",
        "      <th>11</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -509,6 +494,9 @@
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -521,6 +509,9 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -532,6 +523,9 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -545,6 +539,9 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -557,21 +554,24 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       cup_id   4    5    6    7    8    9   10   11\n",
-       "0  1008415089 NaN  NaN  NaN  NaN  NaN  NaN  1.0  NaN\n",
-       "1  1017030777 NaN  NaN  1.0  NaN  NaN  1.0  NaN  1.0\n",
-       "2  1017492318 NaN  NaN  NaN  NaN  1.0  NaN  1.0  NaN\n",
-       "3  1020298180 NaN  NaN  NaN  1.0  NaN  1.0  1.0  1.0\n",
-       "4  1026930637 NaN  1.0  NaN  NaN  NaN  1.0  1.0  NaN"
+       "       cup_id   4    5    6    7    8    9   10   11  17  18  19\n",
+       "0  1008415089 NaN  NaN  NaN  NaN  NaN  NaN  1.0  NaN NaN NaN NaN\n",
+       "1  1017030777 NaN  NaN  1.0  NaN  NaN  1.0  NaN  1.0 NaN NaN NaN\n",
+       "2  1017492318 NaN  NaN  NaN  NaN  1.0  NaN  1.0  NaN NaN NaN NaN\n",
+       "3  1020298180 NaN  NaN  NaN  1.0  NaN  1.0  1.0  1.0 NaN NaN NaN\n",
+       "4  1026930637 NaN  1.0  NaN  NaN  NaN  1.0  1.0  NaN NaN NaN NaN"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "6247  4498550854 2020-01-22 14:55:45"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
        "6247  4498550854 2020-01-22 14:55:45     4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "4  1008415089     9                    2"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1052,6 +1052,9 @@
        "      <th>9</th>\n",
        "      <th>10</th>\n",
        "      <th>11</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1066,11 +1069,17 @@
        "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1012822375</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1090,6 +1099,9 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1101,6 +1113,9 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1114,21 +1129,24 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       cup_id    4    5    6    7    8    9   10   11\n",
-       "0  1008415089  1.0  1.0  1.0  1.0  NaN  2.0  1.0  2.0\n",
-       "1  1012822375  2.0  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
-       "2  1017030777  NaN  NaN  NaN  2.0  1.0  1.0  NaN  1.0\n",
-       "3  1017492318  NaN  NaN  1.0  NaN  1.0  NaN  1.0  NaN\n",
-       "4  1019325282  NaN  NaN  NaN  NaN  2.0  1.0  NaN  NaN"
+       "       cup_id    4    5    6    7    8    9   10   11  17  18  19\n",
+       "0  1008415089  1.0  1.0  1.0  1.0  NaN  2.0  1.0  2.0 NaN NaN NaN\n",
+       "1  1012822375  2.0  NaN  NaN  NaN  NaN  NaN  NaN  NaN NaN NaN NaN\n",
+       "2  1017030777  NaN  NaN  NaN  2.0  1.0  1.0  NaN  1.0 NaN NaN NaN\n",
+       "3  1017492318  NaN  NaN  1.0  NaN  1.0  NaN  1.0  NaN NaN NaN NaN\n",
+       "4  1019325282  NaN  NaN  NaN  NaN  2.0  1.0  NaN  NaN NaN NaN NaN"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
