--- a/notebooks/ArcData.ipynb
+++ b/notebooks/ArcData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,10 +38,12 @@
      "text": [
       "Checking for sale data...\n",
       "Found sale data from: Thu May 13 15:30:50 2021\n",
-      "Will be using this locally saved data...\n",
+      "Locally saved data is older than 24 hours!\n",
+      "Have to fetch again...\n",
       "Checking for return data...\n",
       "Found return data from: Thu May 13 15:31:15 2021\n",
-      "Will be using this locally saved data...\n"
+      "Locally saved data is older than 24 hours!\n",
+      "Have to fetch again...\n"
      ]
     }
    ],
@@ -92,9 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting Sale data... Please wait!\n",
+      "Took 20.21 seconds to get Sale data.\n"
+     ]
+    }
+   ],
    "source": [
     "load_dotenv()\n",
     "\n",
@@ -121,9 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting Return data... Please wait!\n",
+      "Took 9.92 seconds to get Return data.\n"
+     ]
+    }
+   ],
    "source": [
     "if fetchReturnData:\n",
     "    print('Getting Return data... Please wait!')\n",
@@ -153,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +252,7 @@
        "4     4256  9678996946      104 2020-01-22 07:56:56"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +366,7 @@
        "4     4256  9678996946      104 2020-01-22 07:56:56     4"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +451,7 @@
        "4  1017492318     8                    1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -480,6 +500,9 @@
        "      <th>17</th>\n",
        "      <th>18</th>\n",
        "      <th>19</th>\n",
+       "      <th>20</th>\n",
+       "      <th>21</th>\n",
+       "      <th>27</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -493,6 +516,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -512,6 +538,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -527,6 +556,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -539,6 +571,9 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -557,21 +592,24 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       cup_id   4    5    6    7    8    9   10   11  17  18  19\n",
-       "0  1008415089 NaN  NaN  NaN  NaN  NaN  NaN  1.0  NaN NaN NaN NaN\n",
-       "1  1017030777 NaN  NaN  1.0  NaN  NaN  1.0  NaN  1.0 NaN NaN NaN\n",
-       "2  1017492318 NaN  NaN  NaN  NaN  1.0  NaN  1.0  NaN NaN NaN NaN\n",
-       "3  1020298180 NaN  NaN  NaN  1.0  NaN  1.0  1.0  1.0 NaN NaN NaN\n",
-       "4  1026930637 NaN  1.0  NaN  NaN  NaN  1.0  1.0  NaN NaN NaN NaN"
+       "       cup_id   4    5    6    7    8    9   10   11  17  18  19  20   21  27\n",
+       "0  1008415089 NaN  NaN  NaN  NaN  NaN  NaN  1.0  NaN NaN NaN NaN NaN  NaN NaN\n",
+       "1  1017030777 NaN  NaN  1.0  NaN  NaN  1.0  NaN  1.0 NaN NaN NaN NaN  NaN NaN\n",
+       "2  1017492318 NaN  NaN  NaN  NaN  1.0  NaN  1.0  NaN NaN NaN NaN NaN  1.0 NaN\n",
+       "3  1020298180 NaN  NaN  NaN  1.0  NaN  1.0  1.0  1.0 NaN NaN NaN NaN  NaN NaN\n",
+       "4  1026930637 NaN  1.0  NaN  NaN  NaN  1.0  1.0  NaN NaN NaN NaN NaN  NaN NaN"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +857,7 @@
        "6247  4498550854 2020-01-22 14:55:45"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +959,7 @@
        "6247  4498550854 2020-01-22 14:55:45     4"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1044,7 @@
        "4  1008415089     9                    2"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1055,6 +1093,9 @@
        "      <th>17</th>\n",
        "      <th>18</th>\n",
        "      <th>19</th>\n",
+       "      <th>20</th>\n",
+       "      <th>21</th>\n",
+       "      <th>28</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1072,11 +1113,17 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1012822375</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1102,6 +1149,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1116,6 +1166,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1132,21 +1185,24 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       cup_id    4    5    6    7    8    9   10   11  17  18  19\n",
-       "0  1008415089  1.0  1.0  1.0  1.0  NaN  2.0  1.0  2.0 NaN NaN NaN\n",
-       "1  1012822375  2.0  NaN  NaN  NaN  NaN  NaN  NaN  NaN NaN NaN NaN\n",
-       "2  1017030777  NaN  NaN  NaN  2.0  1.0  1.0  NaN  1.0 NaN NaN NaN\n",
-       "3  1017492318  NaN  NaN  1.0  NaN  1.0  NaN  1.0  NaN NaN NaN NaN\n",
-       "4  1019325282  NaN  NaN  NaN  NaN  2.0  1.0  NaN  NaN NaN NaN NaN"
+       "       cup_id    4    5    6    7    8    9   10   11  17  18  19  20   21  28\n",
+       "0  1008415089  1.0  1.0  1.0  1.0  NaN  2.0  1.0  2.0 NaN NaN NaN NaN  NaN NaN\n",
+       "1  1012822375  2.0  NaN  NaN  NaN  NaN  NaN  NaN  NaN NaN NaN NaN NaN  NaN NaN\n",
+       "2  1017030777  NaN  NaN  NaN  2.0  1.0  1.0  NaN  1.0 NaN NaN NaN NaN  NaN NaN\n",
+       "3  1017492318  NaN  NaN  1.0  NaN  1.0  NaN  1.0  NaN NaN NaN NaN NaN  1.0 NaN\n",
+       "4  1019325282  NaN  NaN  NaN  NaN  2.0  1.0  NaN  NaN NaN NaN NaN NaN  NaN NaN"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
