--- a/notebooks/CurrentBorrowsReturns.ipynb
+++ b/notebooks/CurrentBorrowsReturns.ipynb
@@ -44,7 +44,8 @@
      "text": [
       "Checking for cup data...\n",
       "Found cup data from: Wed Mar 31 17:24:06 2021\n",
-      "Will be using this locally saved data...\n"
+      "Locally saved data is older than 1440 hours!\n",
+      "Have to fetch again...\n"
      ]
     }
    ],
@@ -79,7 +80,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting Cup data... Please wait!\n",
+      "Took 9.91 seconds to get Cup data.\n"
+     ]
+    }
+   ],
    "source": [
     "load_dotenv()\n",
     "\n",
@@ -138,12 +148,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>B</td>\n",
-       "      <td>828</td>\n",
+       "      <td>919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>R</td>\n",
-       "      <td>4985</td>\n",
+       "      <td>4894</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -151,8 +161,8 @@
       ],
       "text/plain": [
        "  status  count\n",
-       "0      B    828\n",
-       "1      R   4985"
+       "0      B    919\n",
+       "1      R   4894"
       ]
      },
      "execution_count": 5,
@@ -175,7 +185,7 @@
     {
      "data": {
       "text/plain": [
-       "{'borrows': 828, 'returns': 4985, 'total': 5813}"
+       "{'borrows': 919, 'returns': 4894, 'total': 5813}"
       ]
      },
      "execution_count": 6,
