changed dates to be post feb 3rd 2021, and ran

--- a/notebooks/LostCupsGraph.ipynb
+++ b/notebooks/LostCupsGraph.ipynb
@@ -202,8 +202,8 @@
     "saleDF['date_time'] = to_datetime(saleDF['date_time_concat'], dayfirst=True)\n",
     "saleDF = saleDF.drop(['sale_date', 'sale_time', 'date_time_concat'], axis=1)\n",
     "\n",
-    "# filter to get records post 22nd Jan\n",
-    "saleDF = saleDF[saleDF['date_time'] >= '2020/01/22 00:00:00']\n",
+    "# filter to get records post 22nd Jan EDIT post 3rd feb\n",
+    "saleDF = saleDF[saleDF['date_time'] >= '2021/02/03 00:00:00']\n",
     "saleDF = saleDF.sort_values(by='date_time', ascending = True)\n",
     "\n",
     "# append column 'type' to sale dataframe (sale = 1)\n",
