--- a/notebooks/ArcData.ipynb
+++ b/notebooks/ArcData.ipynb
@@ -37,11 +37,11 @@
      "output_type": "stream",
      "text": [
       "Checking for sale data...\n",
-      "Found sale data from: Thu May 13 15:30:50 2021\n",
+      "Found sale data from: Wed Jul 28 18:04:58 2021\n",
       "Locally saved data is older than 24 hours!\n",
       "Have to fetch again...\n",
       "Checking for return data...\n",
-      "Found return data from: Thu May 13 15:31:15 2021\n",
+      "Found return data from: Wed Jul 28 18:13:07 2021\n",
       "Locally saved data is older than 24 hours!\n",
       "Have to fetch again...\n"
      ]
@@ -102,7 +102,7 @@
      "output_type": "stream",
      "text": [
       "Getting Sale data... Please wait!\n",
-      "Took 20.21 seconds to get Sale data.\n"
+      "Took 22.92 seconds to get Sale data.\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
      "output_type": "stream",
      "text": [
       "Getting Return data... Please wait!\n",
-      "Took 9.92 seconds to get Return data.\n"
+      "Took 14.53 seconds to get Return data.\n"
      ]
     }
    ],
@@ -206,38 +206,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4252</td>\n",
-       "      <td>8574643943</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:46:57</td>\n",
+       "      <td>6997</td>\n",
+       "      <td>3517464954</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-27 14:35:35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4253</td>\n",
-       "      <td>2496593207</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:47:50</td>\n",
+       "      <td>6998</td>\n",
+       "      <td>1918660986</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-27 14:55:50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4254</td>\n",
-       "      <td>1590850598</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:48:44</td>\n",
+       "      <td>6999</td>\n",
+       "      <td>6762937484</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-29 07:29:58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4255</td>\n",
-       "      <td>7342150520</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:49:25</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>1918660986</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-29 07:30:07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4256</td>\n",
-       "      <td>9678996946</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:56:56</td>\n",
+       "      <td>7001</td>\n",
+       "      <td>4405493099</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-29 07:30:20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -245,11 +245,11 @@
       ],
       "text/plain": [
        "   sale_id      cup_id  cafe_id           date_time\n",
-       "0     4252  8574643943      104 2020-01-22 07:46:57\n",
-       "1     4253  2496593207      104 2020-01-22 07:47:50\n",
-       "2     4254  1590850598      104 2020-01-22 07:48:44\n",
-       "3     4255  7342150520      104 2020-01-22 07:49:25\n",
-       "4     4256  9678996946      104 2020-01-22 07:56:56"
+       "0     6997  3517464954      101 2021-04-27 14:35:35\n",
+       "1     6998  1918660986      101 2021-04-27 14:55:50\n",
+       "2     6999  6762937484      101 2021-04-29 07:29:58\n",
+       "3     7000  1918660986      101 2021-04-29 07:30:07\n",
+       "4     7001  4405493099      101 2021-04-29 07:30:20"
       ]
      },
      "execution_count": 6,
@@ -272,8 +272,8 @@
     "saleDF['date_time'] = to_datetime(saleDF['date_time_concat'], dayfirst=True)\n",
     "saleDF = saleDF.drop(['sale_date', 'sale_time', 'date_time_concat'], axis=1)\n",
     "\n",
-    "# filter to get records post 22nd Jan\n",
-    "saleDF = saleDF[saleDF['date_time'] >= '2020/01/22 00:00:00']\n",
+    "# filter to get records post 22nd Jan EDIT post Feb 3rd 2021\n",
+    "saleDF = saleDF[saleDF['date_time'] >= '2021/02/03 00:00:00']\n",
     "saleDF = saleDF.sort_values(by='date_time', ascending = True).reset_index(drop=True)\n",
     "\n",
     "saleDF.head()"
@@ -315,43 +315,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4252</td>\n",
-       "      <td>8574643943</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:46:57</td>\n",
-       "      <td>4</td>\n",
+       "      <td>6997</td>\n",
+       "      <td>3517464954</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-27 14:35:35</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4253</td>\n",
-       "      <td>2496593207</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:47:50</td>\n",
-       "      <td>4</td>\n",
+       "      <td>6998</td>\n",
+       "      <td>1918660986</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-27 14:55:50</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4254</td>\n",
-       "      <td>1590850598</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:48:44</td>\n",
-       "      <td>4</td>\n",
+       "      <td>6999</td>\n",
+       "      <td>6762937484</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-29 07:29:58</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4255</td>\n",
-       "      <td>7342150520</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:49:25</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>1918660986</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-29 07:30:07</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4256</td>\n",
-       "      <td>9678996946</td>\n",
-       "      <td>104</td>\n",
-       "      <td>2020-01-22 07:56:56</td>\n",
-       "      <td>4</td>\n",
+       "      <td>7001</td>\n",
+       "      <td>4405493099</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2021-04-29 07:30:20</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -359,11 +359,11 @@
       ],
       "text/plain": [
        "   sale_id      cup_id  cafe_id           date_time  week\n",
-       "0     4252  8574643943      104 2020-01-22 07:46:57     4\n",
-       "1     4253  2496593207      104 2020-01-22 07:47:50     4\n",
-       "2     4254  1590850598      104 2020-01-22 07:48:44     4\n",
-       "3     4255  7342150520      104 2020-01-22 07:49:25     4\n",
-       "4     4256  9678996946      104 2020-01-22 07:56:56     4"
+       "0     6997  3517464954      101 2021-04-27 14:35:35    17\n",
+       "1     6998  1918660986      101 2021-04-27 14:55:50    17\n",
+       "2     6999  6762937484      101 2021-04-29 07:29:58    17\n",
+       "3     7000  1918660986      101 2021-04-29 07:30:07    17\n",
+       "4     7001  4405493099      101 2021-04-29 07:30:20    17"
       ]
      },
      "execution_count": 7,
@@ -410,32 +410,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1008415089</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1017492318</td>\n",
+       "      <td>21</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1017030777</td>\n",
-       "      <td>6</td>\n",
+       "      <td>1034777146</td>\n",
+       "      <td>19</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1017030777</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1045514637</td>\n",
+       "      <td>21</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1017030777</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1052456801</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1017492318</td>\n",
-       "      <td>8</td>\n",
+       "      <td>1133606645</td>\n",
+       "      <td>17</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -444,11 +444,11 @@
       ],
       "text/plain": [
        "       cup_id  week  occurrence_per_week\n",
-       "0  1008415089    10                    1\n",
-       "1  1017030777     6                    1\n",
-       "2  1017030777     9                    1\n",
-       "3  1017030777    11                    1\n",
-       "4  1017492318     8                    1"
+       "0  1017492318    21                    1\n",
+       "1  1034777146    19                    1\n",
+       "2  1045514637    21                    1\n",
+       "3  1052456801    18                    2\n",
+       "4  1133606645    17                    1"
       ]
      },
      "execution_count": 8,
@@ -489,61 +489,18 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>cup_id</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
        "      <th>17</th>\n",
        "      <th>18</th>\n",
        "      <th>19</th>\n",
        "      <th>20</th>\n",
        "      <th>21</th>\n",
        "      <th>27</th>\n",
+       "      <th>31</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1008415089</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1017030777</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>1017492318</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -551,27 +508,35 @@
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1034777146</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1045514637</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1020298180</td>\n",
+       "      <td>1052456801</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -580,18 +545,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1026930637</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1133606645</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -601,12 +559,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       cup_id   4    5    6    7    8    9   10   11  17  18  19  20   21  27\n",
-       "0  1008415089 NaN  NaN  NaN  NaN  NaN  NaN  1.0  NaN NaN NaN NaN NaN  NaN NaN\n",
-       "1  1017030777 NaN  NaN  1.0  NaN  NaN  1.0  NaN  1.0 NaN NaN NaN NaN  NaN NaN\n",
-       "2  1017492318 NaN  NaN  NaN  NaN  1.0  NaN  1.0  NaN NaN NaN NaN NaN  1.0 NaN\n",
-       "3  1020298180 NaN  NaN  NaN  1.0  NaN  1.0  1.0  1.0 NaN NaN NaN NaN  NaN NaN\n",
-       "4  1026930637 NaN  1.0  NaN  NaN  NaN  1.0  1.0  NaN NaN NaN NaN NaN  NaN NaN"
+       "       cup_id   17   18   19   20   21  27  31\n",
+       "0  1017492318  NaN  NaN  NaN  NaN  1.0 NaN NaN\n",
+       "1  1034777146  NaN  NaN  1.0  NaN  NaN NaN NaN\n",
+       "2  1045514637  NaN  NaN  NaN  NaN  1.0 NaN NaN\n",
+       "3  1052456801  NaN  2.0  NaN  NaN  NaN NaN NaN\n",
+       "4  1133606645  1.0  NaN  NaN  2.0  NaN NaN NaN"
       ]
      },
      "execution_count": 9,
@@ -1096,6 +1054,7 @@
        "      <th>20</th>\n",
        "      <th>21</th>\n",
        "      <th>28</th>\n",
+       "      <th>31</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1116,11 +1075,13 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1012822375</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1152,6 +1113,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1169,6 +1131,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1188,18 +1151,26 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       cup_id    4    5    6    7    8    9   10   11  17  18  19  20   21  28\n",
-       "0  1008415089  1.0  1.0  1.0  1.0  NaN  2.0  1.0  2.0 NaN NaN NaN NaN  NaN NaN\n",
-       "1  1012822375  2.0  NaN  NaN  NaN  NaN  NaN  NaN  NaN NaN NaN NaN NaN  NaN NaN\n",
-       "2  1017030777  NaN  NaN  NaN  2.0  1.0  1.0  NaN  1.0 NaN NaN NaN NaN  NaN NaN\n",
-       "3  1017492318  NaN  NaN  1.0  NaN  1.0  NaN  1.0  NaN NaN NaN NaN NaN  1.0 NaN\n",
-       "4  1019325282  NaN  NaN  NaN  NaN  2.0  1.0  NaN  NaN NaN NaN NaN NaN  NaN NaN"
+       "       cup_id    4    5    6    7    8    9   10   11  17  18  19  20   21  \\\n",
+       "0  1008415089  1.0  1.0  1.0  1.0  NaN  2.0  1.0  2.0 NaN NaN NaN NaN  NaN   \n",
+       "1  1012822375  2.0  NaN  NaN  NaN  NaN  NaN  NaN  NaN NaN NaN NaN NaN  NaN   \n",
+       "2  1017030777  NaN  NaN  NaN  2.0  1.0  1.0  NaN  1.0 NaN NaN NaN NaN  NaN   \n",
+       "3  1017492318  NaN  NaN  1.0  NaN  1.0  NaN  1.0  NaN NaN NaN NaN NaN  1.0   \n",
+       "4  1019325282  NaN  NaN  NaN  NaN  2.0  1.0  NaN  NaN NaN NaN NaN NaN  NaN   \n",
+       "\n",
+       "   28  31  \n",
+       "0 NaN NaN  \n",
+       "1 NaN NaN  \n",
+       "2 NaN NaN  \n",
+       "3 NaN NaN  \n",
+       "4 NaN NaN  "
       ]
      },
      "execution_count": 18,
